fix: fix ci yaml

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,28 +4,31 @@ on:
   - push
   - workflow_dispatch
 
+env:
+  SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
 jobs:
-  ### Analyze Security Vulnerabilities
+  # Analyze Security Vulnerabilities
   security:
     name: Analyze Security Vulnerabilities
-    runs-on: ubuntu-22.04
-    timeout-minutes: 30
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/maven-3-jdk-11@master
-        # to make sure that SARIF upload gets called
+      - name: Install Snyk
+        uses: snyk/actions/setup@806182742461562b67788a64410098c9d9b96adb
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: run Snyk Open Source Test
+        run: snyk test --all-sub-projects
         continue-on-error: true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args:
-            --sarif-file-output=snyk.sarif .
-      - name: Upload result to workflow artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          # tests and linter reports
-          name: snyk.sarif
-          path: snyk.sarif
+      - name: run Snyk Code Test
+        run: snyk code test
+        continue-on-error: true
 
